test_output_utf8_v2.txt
============================= test session starts =============================
platform win32 -- Python 3.12.7, pytest-9.0.2, pluggy-1.6.0
rootdir: C:\Users\shrey\quant projects\3\stochlab
plugins: anyio-4.12.0
collected 0 items / 1 error

=================================== ERRORS ====================================
_________________ ERROR collecting backend/tests/test_heat.py _________________
..\venv\Lib\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
..\venv\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Program Files\Python312\Lib\importlib\__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
..\venv\Lib\site-packages\_pytest\assertion\rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
..\venv\Lib\site-packages\_pytest\assertion\rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Program Files\Python312\Lib\ast.py:52: in parse
    return compile(source, filename, mode, flags,
E     File "c:\Users\shrey\quant projects\3\stochlab\backend\tests\test_heat.py", line 10
E       def test_stability_violation_raises() 
E                                             ^
E   SyntaxError: expected ':'
=========================== short test summary info ===========================
ERROR backend/tests/test_heat.py
!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
============================== 1 error in 0.58s ===============================
